--- a/versions/5.49.1/core/frontend/src/member-attribution/.eslintrc
+++ b/versions/5.49.1/core/frontend/src/member-attribution/.eslintrc
@@ -1,5 +1,8 @@
 {
-    "extends": "../../../../.eslintrc.js",
+    "extends": [
+    "../../../../.eslintrc.js",
+    "prettier"
+    ]
     "env": {
         "browser": true,
         "node": false
